--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
 
       <div class="row">
         <div class="col-6">
-          <h1 id="city-name">Adelaide</h1>
+          <h1 id="city-name"></h1>
           <h3 id="current-day">Friday, 25 June 2021 | 6:00PM</h3>
-          <h3 id="overview">Cloudy</h3>
+          <h3 id="overview"></h3>
           <img src="img/sunny.png" width="120px" />
         </div>
         <div class="col-6">
           <h2 class="temp">
-            <span id="main-temperature">19</span
+            <span id="main-temperature"></span
             ><span id="main-units">°C | °F</span>
           </h2>
           <ul>
-            <li>Humidity: 70%</li>
-            <li>Wind: 60 km/h</li>
+            <li>Humidity: <span id="humidity">70</span>%</li>
+            <li>Wind: <span id="wind">60</span> km/h</li>
           </ul>
         </div>
 
