--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="col-6">
           <h1 id="city-name"></h1>
-          <h3 id="current-day">Friday, 25 June 2021 | 6:00PM</h3>
+          <h3>Last updated: <span id="current-day"></span></h3>
           <h3 id="overview"></h3>
           <img src="img/sunny.png" width="120px" />
         </div>
