Updated weather icon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h1 id="city-name"></h1>
           <h3>Last updated: <span id="current-day"></span></h3>
           <h3 id="overview"></h3>
-          <img src="img/sunny.png" width="120px" />
+          <img src=".." alt="" width="120px" id="icon"/>
         </div>
         <div class="col-6">
           <h2 class="temp">
