Updated search engine

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               autofocus="on"
               class="form-control"
               id="city-search"
+              autocomplete="off"
             />
           </div>
           <div class="col-2" id="search-button">
