--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col-6">
           <h2 class="temp">
             <span id="main-temperature"></span
-            ><span id="main-units">°C | °F</span>
+            ><span id="main-units"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
           </h2>
           <ul>
             <li>Humidity: <span id="humidity">70</span>%</li>
