--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </form>
 
-      <div class="row">
+      <div class="row" id="weather-area">
         <div class="col-6">
           <h1 id="city-name"></h1>
           <h3>Last updated: <span id="current-day"></span></h3>
