--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Weather App by Yash</title>
     <meta charset="UTF-8" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -69,7 +69,7 @@
     </div>
 
     <p>
-      <a href="https://github.com/yashosmasho/my-weather-app" target="_blank"
+      <a href="https://github.com/yashosmasho/vanilla-weather-app" target="_blank"
         >Open-source code</a
       >
       by Yashinni M
